# oso-play-omicron

./: Cargo.toml
src/: lib.rs  main.rs  resources.rs
src/model_iam/: iam.polar
src/model_rebac/: mod.rs  rebac.polar
