[package]
name = "oso-play-omicron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1.4"
oso = "0.22"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = [ "std", "env-filter", "fmt", "ansi" ] }
uuid = "0.8"

[patch.crates-io]
oso = { path = "../oso-local/languages/rust/oso" }
